--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         * SITE_NAME：站点名称
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "",
-            SITE_NAME: "FODI",
+            SCF_GATEWAY: "https://sweet-mode-68d7.chxtin.workers.dev",
+            SITE_NAME: "我的仓库",
             IS_CF: true
         };
         if (window.GLOBAL_CONFIG.SCF_GATEWAY.indexOf('workers') === -1) {
